# emo_classifier

./: .cache  .env.example  .gitignore  ASSUMPTIONS.md  EMO_BANDS.md  README.md  __init__.py  api.py  build_portable.py  classifier_audio.py  classifier_spotify.py  config.py  emo_classifier.spec  generate_seed_data.py  music_to_pullfrom  predict.py  pyproject.toml  requirements.txt  spotify_data.py  spotify_from_audio.py  spotify_preview_fetch.py  standalone_app.py  train.py  train.sh  verify_emo_dataset.py
docs/: EMO_VERIFIER_METHODOLOGY.md  EMO_VERIFIER_METHODOLOGY.tex  STANDALONE_APP.md
models/: emo_classifier_audio_meta.json  emo_classifier_spotify_meta.json
static/: index.html
